<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NanoDraw</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="setcolor">Set Color</string>
    <string name="about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pls_set_the_color">Please set the color (RGB)</string>
    <string name="red">Red (0&#8211;255)</string>
    <string name="green">Green (0&#8211;255)</string>
    <string name="blue">Blue (0&#8211;255)</string>
    <string name="ok_string">OK</string>
    <string name="cancel_string">Cancel</string>

</resources>
