<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
    tools:context=".SettingsActivity" >



    <TextView
        android:id="@+id/set_the_color_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pls_set_the_color"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/editRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="number" />
    <TextView
        android:id="@+id/textViewGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:textSize="20sp" />
    
    <EditText
        android:id="@+id/editGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="number" >
		</EditText>
    <TextView
        android:id="@+id/textViewBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/editBlues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="number" >

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/okbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveColor"
            android:text="@string/ok_string" />

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selfDestruct"
            android:text="@string/cancel_string" />

    </LinearLayout>

</LinearLayout>